# s2ble

./: README.md  pyproject.toml  s2ble.py
core/: braille.py
s2b/: en_english.s2b
utils/: typer.py
